2009-03-13  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Clear selection when pasting.

2009-03-11  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Fix visual mode anchoring,
	  return to normal mode when entire command buffer deleted.

2009-03-08  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml: fixed "Bug 482804 - Highlight
	  current line doesnt work in Oblivion theme".

2009-03-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Removed debug messages.

2009-03-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed "Bug 482120 - Selection
	  isn't repainted correctly when it's reduced
	  programmatically".

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* SyntaxModes/CSharpSyntaxMode.xml:
	* SyntaxModes/MakefileSyntaxMode.xml: Added makefile syntax
	  mode.

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GapBuffer.cs: Corrected insignificant
	  algortihm glitch in gap buffer.

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am: fixed makefile.

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed "Bug 480308 - Editor
	  not scrolling horizontally".

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Styles/TangoLightStyle.xml: Changed diff header style for
	  tango light.

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* SyntaxModes/DiffSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/Style.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Added diff file
	  syntax mode.

2009-03-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Worked on horizontal
	  scrolling behavior.

2009-03-02  Mike Krüger  <mkrueger@novell.com>
