@@ -7,6 +7,14 @@
 	* Mono.TextEditor.Vi/ViMode.cs: Fix visual mode anchoring,
 	  return to normal mode when entire command buffer deleted.
 
+2009-03-09  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.TextEditor.Highlighting/IXmlProvider.cs:
+	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fix
+	  resource disposal issues that prevented addins adding syntax
+	  modes and colour schemes, and probably caused resource
+	  stream leaks.
+
 2009-03-08  Mike Krüger  <mkrueger@novell.com>
 
 	* Styles/OblivionStyle.xml: fixed "Bug 482804 - Highlight
